--- a/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
+++ b/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
@@ -30,7 +30,7 @@
                         <tr>
                             <td>{!visit.Name}</td>
                             <td>{!visit.Timeplane__c}</td>
-                            <td><c:RRIconSplitter value="{!visit.Icons__c}" hideMoreThan3="true"/></td>
+                            <td><c:RRIconSplitter class="svl-icon" value="{!visit.Icons__c}" hideMoreThan3="true"/></td>
                         </tr>
                     </aura:iteration>
                 </c:RRTable>
