--- a/force-app/main/default/aura/ParticipantCardFields/ParticipantCardFields.cmp
+++ b/force-app/main/default/aura/ParticipantCardFields/ParticipantCardFields.cmp
@@ -73,9 +73,7 @@
                 <div class="vpi-field">
                     <div class="label">{!$Label.c.PE_Study_Site_Referred_To}</div>
                     <div class="value">
-                        <c:RRLink label="{!v.pe.Study_Site__r.Name}"
-                                  maxWidth="250px"
-                                  page="{!'study-workspace?id=' + v.pe.Study_Site__r.Clinical_Trial_Profile__c + '&amp;tab=tab-referred-study-sites'}"/>
+                        {!v.pe.Study_Site__r.Name}
                     </div>
                 </div>
 
